Added Full Create

--- a/src/RiceAndBeans.UI/Views/Category/Index.cshtml
+++ b/src/RiceAndBeans.UI/Views/Category/Index.cshtml
@@ -18,6 +18,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Parent)
+        </th>
         <th></th>
     </tr>
 
@@ -31,6 +34,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Parent)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
